# cpe631_gpu_project

./: .gitignore  LICENSE  README.md  output.txt  runBenchmark.sh  runBenchmark2.sh  runBenchmarkOpenCL.sh  runBenchmarkSmall.sh  seeshNasSource.sh
Data/: 2140sizeMetrics.csv  2140sizeMetricsItr.csv  sizeMetrics.csv  sizeMetricsItr.csv  sizeMetricsItrGauss.csv  sizeMetricsItrJ12.csv
archive/: Archive_cudaCpuVsGpuItrGauss.py
code/: CMakeLists.txt  benchmark.cpp  benchmark.hh  canny.cpp
cppData/: cppMetrics.csv  cppMetrics_RTX3070.csv
cupti_sandbox/: Makefile  cupti_trace_injection.cpp  helper_cupti_activity.h
data/: 1745289571_IterationsTest_n1000_thr16.csv  1745289571_IterationsTest_n1000_thr16CPU.csv  1745290012_IterationsTest_n100_thr16.csv  1745290012_IterationsTest_n100_thr16CPU.csv  1745291413_IterationsTestCanny_n100_thr16.csv  1745291413_IterationsTestCanny_n100_thr16CPU.csv  1745291487_IterationsTestCanny_n100_thr16.csv  1745291487_IterationsTestCanny_n100_thr16CPU.csv  1745292386_IterationsTestCanny_n100_thr16.csv  1745292386_IterationsTestCanny_n100_thr16CPU.csv  1745292413_IterationsTestGauss_n100_thr16.csv  1745292413_IterationsTestGauss_n100_thr16CPU.csv  1745292562_IterationsTestCanny_n100_thr16.csv  1745292562_IterationsTestCanny_n100_thr16CPU.csv  1745292575_IterationsTestGauss_n100_thr16.csv  1745292575_IterationsTestGauss_n100_thr16CPU.csv  1745293588_ImageSize_rate0_5_thr16.csv  1745293913_ImageSize_rate0_5_thr16.csv  1745293967_IterationsTestGauss_n100_thr16.csv  1745293967_IterationsTestGauss_n100_thr16CPU.csv  1745293982_IterationsTestGauss_n100_thr16.csv  1745293982_IterationsTestGauss_n100_thr16CPU.csv  1745295920_ImageSize_rate0_5_thr16.csv  1745295934_ImageSize_rate0_6_thr16.csv  1745296166_NumberIterationsTestCanny_n1000_thr16.csv  1745296166_NumberIterationsTestCanny_n1000_thr16CPU.csv  (+273 more)
(+21 files in other folders)
